pi-cluster/deployments/flashcards/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: flashcards
  namespace: flashcards
spec:
  type: ClusterIP
  selector:
    app: flashcards
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: http1
