pi-cluster/deployments/flashcards/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flashcards
  namespace: flashcards
  labels:
    app: flashcards
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-url: "https://auth.charlieegan3.co.uk/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.charlieegan3.co.uk/oauth2/start?rd=https://flashcards.charlieegan3.co.uk"
spec:
  tls:
  - hosts:
    - flashcards.charlieegan3.co.uk
    secretName: flashcards-tls
  rules:
  - host: flashcards.charlieegan3.co.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: flashcards
          servicePort: 80
